[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Vili Sihvo <vilisihvo25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
